--- a/homework 1/style.css
+++ b/homework 1/style.css
@@ -57,8 +57,23 @@ footer {
 }
 
 /* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
-@media (max-width: 600px) {
+/*@media (max-width: 600px) {
   nav, article {
+    width: 100%;
+    height: auto;
+  }
+}*/
+
+@media only screen and (max-width: 700px) {
+  .responsive {
+    width: 37.99999%;
+    height: auto;
+    margin: 6px 0;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .responsive {
     width: 100%;
     height: auto;
   }
